--- a/Search.html
+++ b/Search.html
@@ -1,11 +1,23 @@
 <html> 
-<head> <title> Search Engine </title> </head> 
-<body> 
+<head>
+<title> Search Engine </title>
+<style type="text/css">
+h1 {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+</style>
+</head> 
+
+<body>
+<h1>
 <form method="post" action="Search.jsp"> 
-Input Number of Pages to Fetch: <input type="text" name="num"> 
+Input Number of Pages to Fetch: <input type="text" name="number"> 
 <input type="submit" value="Submit"> 
 </form> 
+</h1>
 </body> 
-</html> 
- 
- 
+</html>
