--- a/Search.html
+++ b/Search.html
@@ -1,23 +1,95 @@
 <html> 
 <head>
 <title> Search Engine </title>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script>
+$(document).ready(function(e) {
+	$("#delete").click(function(e) {
+        e.preventDefault();
+        if (confirm('Are you sure you want to Delete Files?')) {
+        // Save it!
+			$.ajax({
+                type: "POST",
+                url: "Delete.jsp",
+                success: function(msg){
+                    alert(msg)
+                },
+			});
+        } else {
+        // Do nothing!
+        }
+	}); 
+});
+</script>
 <style type="text/css">
+input {
+    padding: 8px;
+}
+#link {
+    width: 500px;
+}
+h2 {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -270%);
+}
+#database {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-200%, -500%);
+}
+#delete {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -500%);
+}
 h1 {
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
+}
+#search{
+    width: 500px;
+    background: #eeeeee;
+    border-radius: 20px;
 }
 </style>
 </head> 
 
 <body>
+<h2>
+    <form method="post" action="Fetch.jsp"> 
+    Input Link:
+        <input id="link" type="text" name="link" value="https://www.cse.ust.hk/~kwtleung/COMP4321/testpage.htm">
+        <BR>
+        <BR>
+    Input Number of Pages to Fetch:
+        <input type="text" name="number", value=""> 
+    <input type="submit" value="Submit"> 
+    </form> 
+</h2>
+<h4>
+    <form method="post" action="Database.jsp"> 
+        <input id="database" type="submit" value="   Database   ">
+    </form>
+    <form>
+        <input id="delete" type="submit" value="   Delete Database   ">
+    </form>
+</h4>
 <h1>
-<form method="post" action="Search.jsp"> 
-Input Number of Pages to Fetch: <input type="text" name="number"> 
-<input type="submit" value="Submit"> 
-</form> 
+    <form method="post" action="Search.jsp">
+    Search:
+        <input id="search" type="text" name="query" value="">
+    <input type="submit" value="Search"> 
+    </form>
 </h1>
 </body> 
 </html>
