Add Dictionary and SensitiveWords

--- a/Search.html
+++ b/Search.html
@@ -90,6 +90,9 @@ h1 {
         <input id="search" type="text" name="query" value="">
     <input type="submit" value="Search"> 
     </form>
+    <form method="post" action="Words.jsp"> 
+        <input id="words" type="submit" value="   All Words   ">
+    </form>
 </h1>
 </body> 
 </html>
