Search History Support

--- a/Search.html
+++ b/Search.html
@@ -93,6 +93,9 @@ h1 {
     <form method="post" action="Words.jsp"> 
         <input id="words" type="submit" value="   All Words   ">
     </form>
+    <form method="post" action="SearchHistory.jsp"> 
+        <input type="submit" value="   Search History   ">
+    </form>
 </h1>
 </body> 
 </html>
