--- a/Search.html
+++ b/Search.html
@@ -97,5 +97,8 @@ h1 {
         <input type="submit" value="   Search History   ">
     </form>
 </h1>
+    <!-- <form method="post" action="Check.jsp"> 
+        <input type="submit" value="   Check   ">
+    </form> -->
 </body> 
 </html>
